@@ -1,0 +1,4 @@
+co: name={NotAllFilesUploadedBecauseOverwriteFilesNotPermitted} description={} changed={2016-05-04 15:19:14 CEST} changedby={ec} visualorder={0} guid={1547BEA541B127E8} parentguid={} typeguid={E6AFEA202AFB4911} id={} parentid={} typeid={}
+val: guid={1547BEA54384FFF5} datatype={} isdefault={false} langid={de} description={} validfrom={2011-03-13 11:29:07 CET} validto={} changed={2016-05-04 15:19:14 CEST} changedby={ec} properties={} id={}
+val: guid={1547BEA5422B2E45} datatype={} isdefault={true} langid={en} description={} validfrom={2011-03-13 11:29:01 CET} validto={} changed={2016-05-04 15:19:14 CEST} changedby={ec} properties={} id={}
+val: guid={1547BEA542D14C53} datatype={} isdefault={false} langid={fr} description={} validfrom={2011-03-13 11:29:04 CET} validto={} changed={2016-05-04 15:19:14 CEST} changedby={ec} properties={} id={}
